# qwix-benchmarking

./: .gitignore  README.md  pyproject.toml  quantize_maxtext_test.py  run_benchmark.py
configs/: awq_example.yaml  example.yaml  gptq_example.yaml
qwix_bench/: __init__.py  config.py  model.py  quantize.py  report.py  runner.py
qwix_bench/metrics/: __init__.py  accuracy.py  latency.py  memory.py  model_size.py  throughput.py
tests/: test_config.py  test_metrics_accuracy.py  test_metrics_latency_throughput.py  test_metrics_memory.py  test_metrics_model_size.py  test_quantize.py  test_report.py  test_runner_smoke.py
