[project]
name = "qwix-bench"
version = "0.1.0"
description = "Benchmarking framework for qwix quantization on MaxText models."
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
  "jax",
  "flax>=0.12.0",
  "numpy",
  "optax",
  "pyyaml",
  "tabulate",
  # qwix and MaxText are imported but typically installed from source
  # alongside this package; declare them here so `pip install .` surfaces a
  # clear error when they're missing.
  "qwix",
  "MaxText",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qwix_bench*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",  # line length is enforced by the formatter
  "B008",  # default factories on dataclass fields are fine
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
